<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/zone_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="125dp"
        android:layout_width="match_parent">

        <ImageView
            android:layout_height="125dp"
            android:layout_width="150dp"
            app:srcCompat="@drawable/park_logo"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/dino_header"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingStart="20dp"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_gravity="center|start"
            android:text="@string/placeholder_string"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:text="@string/relocate_dino_underlined"
        android:textSize="23sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:text="@string/dinosaur_name"
            android:textSize="23sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/dino_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/placeholder_string"
                android:inputType="text"
                app:boxBackgroundMode="outline"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:text="@string/new_zone"
            android:textSize="23sp"
            android:paddingTop="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopEnd="0dp"
            app:boxCornerRadiusTopStart="0dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/new_zone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/placeholder_string"
                android:inputType="text"
                app:boxBackgroundMode="outline"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/dino_activity_relocate_button"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:clickable="true"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_square"
            android:text="@string/relocate"/>


        <TextView
            android:id="@+id/park_map_button"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:clickable="true"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_square"
            android:text="@string/park_map"/>
    </LinearLayout>

</LinearLayout>